tests/algorithms/x/C/knapsack/knapsack.c
// Generated by Mochi 0.10.32 on 2025-08-16 11:14 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


size_t append_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long knapsack(long long capacity, long long * weights, size_t weights_len, long long * values, size_t values_len, long long counter);
void user_main();
int main(void);

long long knapsack(long long capacity, long long * weights, size_t weights_len, long long * values, size_t values_len, long long counter) {
    if ((counter == 0LL) || (capacity == 0LL)) {
        return 0LL;
    }
    if (weights[(int)({long long _mochi_idx = counter - 1LL; _mochi_idx < 0 ? weights_len + _mochi_idx : _mochi_idx;})] > capacity) {
        return knapsack(capacity, weights, weights_len, values, values_len, counter - 1LL);
    } else {
        long long left_capacity = capacity - weights[(int)({long long _mochi_idx = counter - 1LL; _mochi_idx < 0 ? weights_len + _mochi_idx : _mochi_idx;})];
        long long new_value_included = values[(int)({long long _mochi_idx = counter - 1LL; _mochi_idx < 0 ? values_len + _mochi_idx : _mochi_idx;})] + knapsack(left_capacity, weights, weights_len, values, values_len, counter - 1LL);
        long long without_new_value = knapsack(capacity, weights, weights_len, values, values_len, counter - 1LL);
        if (new_value_included > without_new_value) {
            return new_value_included;
        } else {
            return without_new_value;
        }
    }
}

void user_main() {
    long long *weights = NULL;
    size_t weights_len = 0;
    weights = list_append_long_long(weights, &weights_len, 10LL);
    weights = list_append_long_long(weights, &weights_len, 20LL);
    weights = list_append_long_long(weights, &weights_len, 30LL);
    long long *values = NULL;
    size_t values_len = 0;
    values = list_append_long_long(values, &values_len, 60LL);
    values = list_append_long_long(values, &values_len, 100LL);
    values = list_append_long_long(values, &values_len, 120LL);
    long long cap = 50LL;
    long long(*)(const char*) count = values_len;
    long long result = knapsack(cap, weights, weights_len, values, values_len, count);
    puts(str_int(result));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
